--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.3.6",
     "cross-env": "^5.2.0",
-    "nuxt": "^2.3.4",
+    "element-ui": "^2.4.11",
     "koa": "^2.6.2",
-    "@nuxtjs/axios": "^5.3.6"
+    "node-sass": "^4.11.0",
+    "nuxt": "^2.3.4",
+    "sass-loader": "^7.1.0"
   },
   "devDependencies": {
+    "babel-plugin-component": "^1.1.1",
     "nodemon": "^1.18.9"
   }
 }
