--- a/package.json
+++ b/package.json
@@ -12,15 +12,23 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
+    "axios": "^0.18.0",
+    "koa-bodyparser": "^3.2.0",
+    "koa-convert": "^1.2.0",
+    "koa-json": "^2.0.2",
+    "koa-logger": "^2.0.1",
     "cross-env": "^5.2.0",
     "element-ui": "^2.4.11",
     "koa": "^2.6.2",
-    "node-sass": "^4.11.0",
+    "koa-router": "^7.4.0",
+    "mongoose": "^5.4.5",
     "nuxt": "^2.3.4",
-    "sass-loader": "^7.1.0"
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "babel-plugin-component": "^1.1.1",
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.18.9",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0"
   }
 }
