--- a/package.json
+++ b/package.json
@@ -13,17 +13,15 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "axios": "^0.18.0",
-    "koa-bodyparser": "^3.2.0",
-    "koa-convert": "^1.2.0",
-    "koa-json": "^2.0.2",
-    "koa-logger": "^2.0.1",
-    "cross-env": "^5.2.0",
+    "consola": "^2.3.2",
     "element-ui": "^2.4.11",
     "koa": "^2.6.2",
-    "koa-router": "^7.4.0",
+    "koa-bodyparser": "^4.2.1",
+    "koa-generic-session": "^2.0.1",
+    "koa-json": "^2.0.2",
+    "koa-redis": "^3.1.3",
     "mongoose": "^5.4.5",
-    "nuxt": "^2.3.4",
-    "passport-local": "^1.0.0"
+    "nuxt": "^2.3.4"
   },
   "devDependencies": {
     "babel-plugin-component": "^1.1.1",
