--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
     "@nuxtjs/axios": "^5.3.6",
     "axios": "^0.18.0",
     "consola": "^2.3.2",
+    "crypto-js": "^3.1.9-1",
     "element-ui": "^2.4.11",
     "koa": "^2.6.2",
     "koa-bodyparser": "^4.2.1",
     "koa-generic-session": "^2.0.1",
     "koa-json": "^2.0.2",
+    "koa-passport": "^4.1.1",
     "koa-redis": "^3.1.3",
+    "koa-router": "^7.4.0",
     "mongoose": "^5.4.5",
-    "nuxt": "^2.3.4"
+    "nuxt": "^2.3.4",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "babel-plugin-component": "^1.1.1",
