--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "consola": "^2.3.2",
     "crypto-js": "^3.1.9-1",
     "element-ui": "^2.4.11",
+    "jsonwebtoken": "^8.4.0",
     "koa": "^2.6.2",
     "koa-bodyparser": "^4.2.1",
     "koa-generic-session": "^2.0.1",
     "koa-json": "^2.0.2",
+    "koa-jwt": "^3.5.1",
     "koa-passport": "^4.1.1",
     "koa-redis": "^3.1.3",
     "koa-router": "^7.4.0",
@@ -29,8 +31,9 @@
   },
   "devDependencies": {
     "babel-plugin-component": "^1.1.1",
-    "nodemon": "^1.18.9",
+    "koa2-cors": "^2.0.6",
     "node-sass": "^4.11.0",
+    "nodemon": "^1.18.9",
     "sass-loader": "^7.1.0"
   }
 }
