--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/axios": "^5.3.6",
     "axios": "^0.18.0",
     "consola": "^2.3.2",
+    "crypto": "^1.0.1",
     "crypto-js": "^3.1.9-1",
     "element-ui": "^2.4.11",
     "jsonwebtoken": "^8.4.0",
@@ -27,7 +28,8 @@
     "koa-router": "^7.4.0",
     "mongoose": "^5.4.5",
     "nuxt": "^2.3.4",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "time-formater": "^1.1.2"
   },
   "devDependencies": {
     "babel-plugin-component": "^1.1.1",
