--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,5 @@
 {
-  "presets": [
-    ["es2015", {
-      "modules": false
-    }]
-  ],
+  "presets": ["es2015"],
   "plugins": [
     [
       "component",
