--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "author": "geminiyu",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
+    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server --exec babel-node",
     "build": "nuxt build",
-    "start": "cross-env NODE_ENV=production node server/index.js",
+    "start": "cross-env NODE_ENV=production node server/index.js --exec babel-node",
     "generate": "nuxt generate"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "axios": "^0.18.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
     "consola": "^2.3.2",
+    "cross-env": "^5.2.0",
     "crypto": "^1.0.1",
     "crypto-js": "^3.1.9-1",
     "element-ui": "^2.4.11",
@@ -23,16 +26,17 @@
     "koa-generic-session": "^2.0.1",
     "koa-json": "^2.0.2",
     "koa-jwt": "^3.5.1",
-    "koa-passport": "^4.1.1",
     "koa-redis": "^3.1.3",
     "koa-router": "^7.4.0",
+    "moment": "^2.24.0",
     "mongoose": "^5.4.5",
     "nuxt": "^2.3.4",
-    "passport-local": "^1.0.0",
+    "objectid-to-timestamp": "^1.3.0",
     "time-formater": "^1.1.2"
   },
   "devDependencies": {
     "babel-plugin-component": "^1.1.1",
+    "babel-preset-es2015": "^6.24.1",
     "koa2-cors": "^2.0.6",
     "node-sass": "^4.11.0",
     "nodemon": "^1.18.9",
